# 3xui-shop

./: .env.example  README.md  README.ru_RU.md  docker-compose.yml  plans.example.json  pyproject.toml
.github/workflows/: deploy.yml
app/: __main__.py  config.py
app/bot/middlewares/: database.py  garbage.py  maintenance.py  throttling.py
app/bot/models/: client_data.py  invite_stats.py  services_container.py
app/bot/payment_gateways/: CONTEXT.md  __init__.py  _gateway.py  cryptopay.py  cryptopay_api.py  gateway_factory.py  sbp_manual.py  ton_manual.py
app/bot/routers/: __init__.py
app/bot/routers/admin_tools/: CONTEXT.md  __init__.py  admin_tools_handler.py  notification_handler.py  payment_confirm_handler.py  server_handler.py
app/bot/routers/download/: handler.py
app/bot/routers/main_menu/: handler.py  keyboard.py
app/bot/routers/misc/: error_handler.py
app/bot/routers/onboarding/: handler.py  keyboard.py
app/bot/routers/profile/: handler.py  keyboard.py
app/bot/routers/referral/: handler.py
app/bot/routers/subscription/: CONTEXT.md  keyboard.py  payment_handler.py  subscription_handler.py
app/bot/routers/support/: handler.py  keyboard.py
app/bot/services/: invite_stats.py  notification.py  payment_stats.py  plan.py  referral.py  server_pool.py  vpn.py
app/bot/tasks/: CONTEXT.md  __init__.py  cryptopay_poll.py  referral.py  subscription_expiry.py  subscription_reminders.py  transactions.py
app/bot/utils/: constants.py  formatting.py  misc.py  navigation.py  time.py
app/db/migration/versions/: 032f2bef8d8d_add_invites_table_update_users_table.py  0d6e179d7d34_user_trial_period_and_referral_model.py  1f557db4f100_remove_current_clients.py  3a79f6c8490e_delete_subscription_url_for_server.py  579d48dd94ef_referrer_rewards.py  5c8c426595b0_fix_promocode.py  5e7a9c2b1d3f_add_device_email_to_users.py  8dd30c5fd47d_initial.py  9aa6ddb8e352_update_transaction_status_enum.py  a1b2c3d4e5f6_transaction_manual_payments.py  b2c3d4e5f6a7_add_reminder_fields_to_users.py  c1d2e3f4a5b6_merge_heads.py  d3e4f5a6b7c8_add_retry_notified.py  dbf2ed0f9dad_add_language_code_for_user.py  e4f5a6b7c8d9_add_activation_applied.py
app/db/models/: CONTEXT.md  invite.py  transaction.py  user.py
app/locales/en/LC_MESSAGES/: bot.po
app/locales/ru/LC_MESSAGES/: bot.po
docs/: user_flow.puml
docs/sdd/: acceptance_criteria.md  constraints.md  plan.yaml  requirements.md  verification.md
docs/sdd-v2/: acceptance_criteria.md  constraints.md  plan.yaml  proposal.md  requirements.md  verification.md
tests/: test_client_keyboards_pbt.py  test_payment_activation_ordering.py  test_payment_flow_pbt.py  test_referral_pbt.py  test_server_add_probe.py  test_server_pool_tls.py  test_subscription_process_no_server.py
