[tool.poetry]
name = "3xui-shop"
version = "1.0.0"
description = "This is a Telegram bot for selling VPN subscriptions. It works with 3X-UI."
authors = ["snoups"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
babel = "^2.16.0"
environs = "^11.2.1"
cachetools = "^5.5.0"
py3xui = "^0.3.2"
yookassa = "^3.4.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
redis = "^5.2.1"
apscheduler = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "PERF", # perflint
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
]
ignore = [
    "E501",    # line too long — handled by formatter
    "TRY003",  # long exception messages
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "G004",    # logging f-string (aiogram ecosystem common)
    "LOG015",  # root logger — pre-existing, not in scope
    "PL",      # pylint — noisy on aiogram handlers
    "RUF012",  # mutable class vars — SQLAlchemy pattern
    "TRY400",  # use logging.exception
    "TRY300",  # else-after-try — pre-existing pattern
    "B008",    # function call in default arg
    "RET504",  # unnecessary assign before return
    "RET505",  # unnecessary else after return
    "SIM105",  # use contextlib.suppress
    "SIM108",  # ternary operator — readability preference
    "SIM102",  # single if — readability preference
    "PTH",     # pathlib (not migrating now)
    "PERF203", # try-except in loop
    "F403",    # star imports — SQLAlchemy legacy pattern in models
    "F405",    # may be from star import — follows from F403
    "F811",    # redefinition — aiogram handler aliasing pattern
    "F821",    # undefined name — SQLAlchemy forward refs in strings
    "E402",    # module level import not at top — conditional imports
    "RUF001",  # ambiguous unicode — Cyrillic callback_data strings
    "RUF013",  # implicit Optional — pre-existing signatures
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]  # re-export pattern
"app/bot/utils/constants.py" = ["E402"]  # conditional imports after constants
"app/bot/payment_gateways/_gateway.py" = ["E402", "F811"]  # conditional import pattern

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/"]
